--- a/Kryonet System/Client/android/AndroidManifest.xml
+++ b/Kryonet System/Client/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.GGI.Fooze.android"
-    android:versionCode="10"
-    android:versionName="10.0" >
+    android:versionCode="14"
+    android:versionName="14.0" >
 
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="19" />
 
@@ -33,4 +33,5 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 </manifest>
